<resources>
    <string name="app_name">number converter</string>
    <string name="A">A</string>
    <string name="b">B</string>
    <string name="F">F</string>
    <string name="E">E</string>
    <string name="D">D</string>
    <string name="clear">clear</string>
    <string name="_0">0</string>
    <string name="hex">HEX :</string>
    <string name="result">result</string>
    <string name="dec">DEC :</string>
    <string name="oct">OCT :</string>
    <string name="bin">BIN :</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="eqwal">=</string>
    <string name="enter_your_number_here">Enter your number here</string>
</resources>